fix(tabs): add opt-in for current animation, performance (#7503)

--- a/src/patternfly/components/Tabs/tabs.scss
+++ b/src/patternfly/components/Tabs/tabs.scss
@@ -3,6 +3,7 @@
 $pf-v6-c-tabs--breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg", "xl", "2xl");
 $pf-v6-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl");
 
+
 @property --#{$tabs}--link-accent--length {
   syntax: "<length>";
   inherits: true;
@@ -121,25 +122,28 @@ $pf-v6-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
 
   // Link accent
   --#{$tabs}--link-accent--start: 0; // needed to create react-token
-  --#{$tabs}--link-accent--length: auto; // needed to create react-token
+  --#{$tabs}--link-accent--length: 0; // needed to create react-token
   --#{$tabs}--link-accent--color: var(--#{$tabs}__item--m-current__link--after--BorderColor);
   --#{$tabs}--link-accent--border-size: var(--#{$tabs}__item--m-current__link--after--BorderWidth);
+  --#{$tabs}--link-accent--TransitionDuration: var(--pf-t--global--motion--duration--md);
+  --#{$tabs}--link-accent--TransitionTimingFunction: var(--pf-t--global--motion--timing-function--decelerate);
   --#{$tabs}--link-accent--InsetBlockStart: auto;
   --#{$tabs}--link-accent--InsetBlockEnd: 0;
-  --#{$tabs}--link-accent--InsetInlineStart: initial;
+  --#{$tabs}--link-accent--InsetInlineStart: 0;
   --#{$tabs}--link-accent--Width: initial;
   --#{$tabs}--link-accent--Height: 0;
   --#{$tabs}--link-accent--BorderBlockEndWidth: var(--#{$tabs}--link-accent--border-size);
   --#{$tabs}--link-accent--BorderInlineStartWidth: 0;
-  --#{$tabs}--m-vertical--link-accent--InsetBlockStart: initial;
+  --#{$tabs}--link-accent--TranslateX: var(--#{$tabs}--link-accent--start);
+  --#{$tabs}--link-accent--TranslateY: 0;
+  --#{$tabs}--link-accent--TransformOrigin: 0 center;
+  --#{$tabs}--m-vertical--link-accent--InsetBlockStart: 0;
   --#{$tabs}--m-vertical--link-accent--InsetBlockEnd: auto;
-  --#{$tabs}--m-vertical--link-accent--InsetInlineStart: 0; 
-  --#{$tabs}--m-vertical--link-accent--Width: 0;
-  --#{$tabs}--m-vertical--link-accent--Height: initial;
   --#{$tabs}--m-vertical--link-accent--BorderBlockEndWidth: 0;
   --#{$tabs}--m-vertical--link-accent--BorderInlineStartWidth: var(--#{$tabs}--link-accent--border-size);
-  --#{$tabs}--link-accent--TransitionDuration: var(--pf-t--global--motion--duration--md);
-  --#{$tabs}--link-accent--TransitionTimingFunction: var(--pf-t--global--motion--timing-function--decelerate);
+  --#{$tabs}--m-vertical--link-accent--TranslateX: 0;
+  --#{$tabs}--m-vertical--link-accent--TranslateY: var(--#{$tabs}--link-accent--start);
+  --#{$tabs}--m-vertical--link-accent--TransformOrigin: center 0;
 
   // Scroll buttons
   --#{$tabs}__scroll-button--PaddingBlockStart: var(--pf-t--global--spacer--sm);
@@ -354,11 +358,13 @@ $pf-v6-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
     --#{$tabs}__list--ScrollSnapTypeAxis: var(--#{$tabs}--m-vertical__list--ScrollSnapTypeAxis);
     --#{$tabs}--link-accent--InsetBlockStart: var(--#{$tabs}--m-vertical--link-accent--InsetBlockStart);
     --#{$tabs}--link-accent--InsetBlockEnd: var(--#{$tabs}--m-vertical--link-accent--InsetBlockEnd);
-    --#{$tabs}--link-accent--InsetInlineStart: var(--#{$tabs}--m-vertical--link-accent--InsetInlineStart);
     --#{$tabs}--link-accent--Width: var(--#{$tabs}--m-vertical--link-accent--Width);
     --#{$tabs}--link-accent--Height: var(--#{$tabs}--m-vertical--link-accent--Height);
     --#{$tabs}--link-accent--BorderBlockEndWidth: var(--#{$tabs}--m-vertical--link-accent--BorderBlockEndWidth);
     --#{$tabs}--link-accent--BorderInlineStartWidth: var(--#{$tabs}--m-vertical--link-accent--BorderInlineStartWidth);
+    --#{$tabs}--link-accent--TranslateX: var(--#{$tabs}--m-vertical--link-accent--TranslateX);
+    --#{$tabs}--link-accent--TranslateY: var(--#{$tabs}--m-vertical--link-accent--TranslateY);
+    --#{$tabs}--link-accent--TransformOrigin: var(--#{$tabs}--m-vertical--link-accent--TransformOrigin);
 
     display: inline-flex;
     flex-direction: column;
@@ -785,7 +791,7 @@ $pf-v6-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
 // stylelint-enable
 
 @media (prefers-reduced-motion: no-preference) {
-  .#{$tabs}:not(.pf-m-box) {
+  .#{$tabs}.pf-m-animate-current:not(.pf-m-box) {
     .#{$tabs}__link,
     .#{$tabs}__item.pf-m-action {
       &::after {
@@ -795,9 +801,9 @@ $pf-v6-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
 
     .#{$tabs}__list::after {
       position: absolute;
-      inset-block-start: var(--#{$tabs}--link-accent--InsetBlockStart, var(--#{$tabs}--link-accent--start));
+      inset-block-start: var(--#{$tabs}--link-accent--InsetBlockStart);
       inset-block-end: var(--#{$tabs}--link-accent--InsetBlockEnd);
-      inset-inline-start: var(--#{$tabs}--link-accent--InsetInlineStart, var(--#{$tabs}--link-accent--start));
+      inset-inline-start: var(--#{$tabs}--link-accent--InsetInlineStart);
       width: var(--#{$tabs}--link-accent--Width, var(--#{$tabs}--link-accent--length));
       height: var(--#{$tabs}--link-accent--Height, var(--#{$tabs}--link-accent--length));
       content: "";
@@ -806,7 +812,14 @@ $pf-v6-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
       border-inline-start-width: var(--#{$tabs}--link-accent--BorderInlineStartWidth);
       transition-timing-function: var(--#{$tabs}--link-accent--TransitionTimingFunction);
       transition-duration: var(--#{$tabs}--link-accent--TransitionDuration);
-      transition-property: --#{$tabs}--link-accent--length, --#{$tabs}--link-accent--start, width;
+      transition-property: width, height, translate;
+      transform-origin: var(--#{$tabs}--link-accent--TransformOrigin);
+
+      @include pf-v6-bidirectional-style(
+        $prop: translate,
+        $ltr-val: var(--#{$tabs}--link-accent--TranslateX) var(--#{$tabs}--link-accent--TranslateY),
+        $rtl-val: #{pf-v6-calc-inverse(var(--#{$tabs}--link-accent--TranslateX))} var(--#{$tabs}--link-accent--TranslateY)
+      );
     }
   }
 
