fix(form): added expandable form group animation

--- a/src/patternfly/components/Form/form-field-group.hbs
+++ b/src/patternfly/components/Form/form-field-group.hbs
@@ -1,4 +1,9 @@
-<div class="{{pfv}}form__field-group{{#if form-field-group--IsExpanded}} pf-m-expanded{{/if}}{{#if form-field-group--modifier}} {{form-field-group--modifier}}{{/if}}"
+<div class="{{pfv}}form__field-group
+  {{setModifiers
+    form-field-group--IsExpanded='pf-m-expanded'
+    form-field-group--IsExpandable='pf-m-expandable'
+    form-field-group--modifier=form-field-group--modifier
+  }}"
   role="group"
   {{#unless form-field-group--HasNoTitle}}
     aria-labelledby="{{form-field-group--id}}-title"
