--- a/src/patternfly/components/Form/form-field-group-body.hbs
+++ b/src/patternfly/components/Form/form-field-group-body.hbs
@@ -1,6 +1,6 @@
 <div class="{{pfv}}form__field-group-body{{#if form-field-group-body--modifier}} {{form-field-group-body--modifier}}{{/if}}"
   {{#unless form-field-group--IsExpanded}}
-    hidden
+    inert
   {{/unless}}
   {{#if form-field-group-body--attribute}}
     {{{form-field-group-body--attribute}}}
